hphp/hack/test/typecheck/parse_int_with_underscore_bad2.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

class Foo {
  const int a = 2345_76_;
}
